fix: main page spacing

--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -1,3 +1,8 @@
 .post-form {
 	margin-bottom: 20px;
 }
+
+.create-post button {
+	padding-top: 4px;
+	padding-bottom: 0
+}
